add styling and footer to all pages

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         </ul>
     </nav>
     <header>
-        <h1>Hi, I'm Elaine!</h1>
+        <div id="greeting">Hello!</div>
+        <div id="intro-name">I'm Elaine.</div>
         <p>I'm a student at UNC Chapel Hill majoring in Computer Science and Information Science with an interest in frontend development and a passion for UX Design. Welcome to my portfolio!</p>
     </header>
     <main>
