add media query for mobile screens

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
         <div id="intro-name">I'm Elaine.</div>
         <p>I'm a student at UNC Chapel Hill majoring in Computer Science and Information Science with an interest in frontend development and a passion for UX Design. Welcome to my portfolio!</p>
     </header>
-    <main>
-        Coming Soon
+    <main class="portfolio-preview">
+        <div class="preview">
+            <div class="thumbnail"></div>
+            <div class="description">Coming Soon</div>
+        </div>
     </main>
     <footer>
         <div class="socials">
