add information about me

--- a/about.html
+++ b/about.html
@@ -26,13 +26,33 @@
         <h1>
             About Me
         </h1>
-        <p>I'm currently a junior at UNC Chapel Hill studying Computer Science and Information Science with a focus on Human-Computer Interaction.</p>
-        <p>I've always had a passion for design, whether it be through making graphics for clubs or friends, or through personal art projects. When I discovered UX Design, I realized it was the perfect overlap of technology and design and something I wanted to pursue professionally!</p>
+        <p>I'm currently a junior at UNC Chapel Hill studying Computer Science and Information Science 
+            with a focus on Human-Computer Interaction.</p>
+        <p>I've always had a passion for design, whether it be through making graphics for clubs or friends, 
+            or through personal art projects. When I discovered UX Design, 
+            I realized it was the perfect overlap of technology and design and something I wanted to pursue professionally!</p>
+        <p>When I'm not working or studying, I'm probably painting, reading a good book, or learning how to ice skate.</p>
+        <h1>
+            Why 331917?
+        </h1>
+        <p>The numbers in my GitHub username are a reference to "Where Are You Going? Where Have You Been?" 
+            by Joyce Carol Oates, a short story I read in my AP Literature class.</p>
+        <p>I made my GitHub account just before I started college. 
+            The username "elaine" was already taken, so I needed to add something to my name, 
+            but I didn't want to add just any random number. 
+            My teacher's analysis of this short story was the highlight of the class, 
+            and the memories were still fresh in my mind. So I chose the numbers 331917, 
+            which was a prominent number in the story, as a homage to the class that taught 
+            me so much and shaped me into the student I am today.</p>
+        <p>#331917 is also the hexcode color of the text on this page.</p>
+        <h1>
+            My Art
+        </h1>
     </main>
     <footer>
         <div class="socials">
             <a href="https://github.com/elaine331917" target="_blank">
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                <svg alt="github" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
                     <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
                 </svg>
             </a>
@@ -47,7 +67,7 @@
                 </svg>
             </a>
         </div>
-        <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> | Elaine Dong</p>
+        <p><script>document.write(new Date().getFullYear())</script> | Created by  Elaine Dong</p>
     </footer>
 </body>
 </html>
