--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/other-styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Righteous&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@400;600&family=Montserrat:wght@300;400&family=Oxygen:wght@300;400;700&family=Righteous&family=Roboto+Mono&display=swap" rel="stylesheet">
 <body>
     <nav>
         <a href="index.html" id="logo">
@@ -25,9 +25,15 @@
     <header>
         <h1>My Resume</h1>
     </header>
-    <main id="resume">
-        <iframe src="https://drive.google.com/file/d/1_f6J9sQryOYaN2J64GTJl-_ApA6Bb1IY/preview" width="700" height="700" allow="autoplay"></iframe>
+    <main class="resume">
+        <div class="section">
+            <div class="heading">Intro</div>
+            <div class="text">Hello my name is</div>
+        </div>
     </main>
+    <!--<main id="resume">
+        <iframe src="https://drive.google.com/file/d/1_f6J9sQryOYaN2J64GTJl-_ApA6Bb1IY/preview" width="700" height="700" allow="autoplay"></iframe>
+    </main>-->
     <footer>
         <div class="socials">
             <a href="https://github.com/elaine331917" target="_blank">
