--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <li><a href="about.html">About</a></li>
             <li><a href="resume.html">Resume</a></li>
         </ul>
+        <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+        </label>
     </nav>
     <header>
         <div id="greeting">Hello!</div>
