--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elaine Dong | Portfolio</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script type="text/javascript" src="index.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Oxygen:wght@300;400;700&family=Righteous&family=Roboto+Mono&display=swap" rel="stylesheet">
