--- a/index.html
+++ b/index.html
@@ -5,23 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elaine Dong | Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
-    <script type="text/javascript" src="index.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Oxygen:wght@300;400;700&family=Righteous&family=Roboto+Mono&display=swap" rel="stylesheet">
 <body>
-    <nav>
-        <a href="index.html" id="logo">
+    <nav class="navbar navbar-expand-sm navbar-light" id="navbar">
+        <a class="navbar-brand" href="index.html" id="logo">
             <!--TODO: Add logo here in SVG format https://app.svgator.com/#/-->
             <div id="name">Elaine Dong</div>
         </a>
-        <ul class="custom-nav">
-            <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="resume.html">Resume</a></li>
-        </ul>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse custom-nav-bar justify-content-end" id="navbarContent">
+            <ul class="custom-nav navbar-nav m1-auto">
+                <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+            </ul>
+        </div>
     </nav>
     <header>
         <div id="greeting">Hello!</div>
@@ -31,10 +35,21 @@
             As such, I am an aspiring software engineer with a focus on frontend development and a passion for UX Design. 
             Welcome to my portfolio!</p>
     </header>
-    <main class="portfolio-preview">
+    <main class="previews">
         <div class="preview">
             <div class="thumbnail"></div>
-            <div class="description">Coming Soon</div>
+            <div class="project-info">
+                <div class="project-title"><h3>Around the Block</h3></div>
+                <div class="project-desc"><p>Lorem ipsum</p></div>
+            </div>
+            <div class="tags">
+                <p class="tag">#Angular</p>
+                <p class="tag">#Python</p>
+                <p class="tag">#Typescript</p>
+                <p class="tag">#HTML</p>
+                <p class="tag">#CSS</p>
+                <p class="tag">#Figma</p>
+            </div>
         </div>
     </main>
     <footer>
@@ -62,7 +77,8 @@
         </div>
         <p><a href="https://github.com/elaine331917/elaine331917.github.io">Designed and Developed by Elaine Dong</a> | <script>document.write(new Date().getFullYear())</script></p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
 </html>
