--- a/about.html
+++ b/about.html
@@ -29,18 +29,18 @@
         </div>
     </nav>
     <main>
-        <section>
+        <section class="white">
             <h1>
                 About Me
             </h1>
-            <p>I'm currently a junior at UNC Chapel Hill studying Computer Science and Information Science 
+            <p>I'm currently a junior at <span style="">UNC Chapel Hill</span> studying Computer Science and Information Science 
                 with a focus on Human-Computer Interaction.</p>
-            <p>I've always had a passion for design, whether it be through making graphics for clubs or friends, 
-                or through personal art projects. When I discovered UX Design, 
-                I realized it was the perfect overlap of technology and design and something I wanted to pursue professionally!</p>
-            <p>When I'm not working or studying, I'm probably painting, reading a good book, or learning how to ice skate.</p>
+            <p>After working on various fullstack development projects, I've come to appreciate frontend development the most. I've always had a passion for design, whether it be through making graphics for clubs or friends, 
+                or through personal art projects. When I discovered UX/UI Design, 
+                I realized it was the perfect overlap of technology and design and !</p>
+            <p>In my free time, you can probably find me painting, reading a good book, or learning how to ice skate.</p>
         </section>
-        <section>
+        <section class="pink">
             <h1>
                 Why 331917?
             </h1>
@@ -55,7 +55,7 @@
                 me so much and shaped me into the student I am today.</p>
             <p>#331917 is also the hexcode color of the text on this page.</p>
         </section>
-        <section>
+        <section class="white">
             <h1>
                 My Art
             </h1>
