--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
             <h2>I'm Elaine.</h2>
         </div>
         <div class="my-intro">
-            <p>I'm a student at UNC Chapel Hill majoring in Computer Science and Information Science.</p>
             <p>As an aspiring software engineer with a focus on frontend development and a passion for UX Design, 
             I love designing things and implementing my designs. 
             Welcome to my portfolio!</p>
@@ -44,29 +43,41 @@
         <div class="previews">
             <div class="preview">
                 <div class="project-content">
-                    <div class="thumbnail atb-img"></div>
+                    <a class="thumbnail atb-img" href="projects/atb.html"></a>
                     <div class="project-info">
                         <div class="project-title"><h3>Around the Block</h3></div>
                         <div class="project-desc"><p>A website for helping artists get around creative block by providing new challenges and inspiration.</p></div>
+                        <a href="projects/atb.html">Learn more
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+                            </svg>
+                        </a>
+                        <br>
                         <div class="tags">
-                            <p class="tag">#Angular</p>
-                            <p class="tag">#Python</p>
-                            <p class="tag">#Typescript</p>
-                            <p class="tag">#HTML</p>
-                            <p class="tag">#CSS</p>
-                            <p class="tag">#Figma</p>
+                            <p class="tag">Angular</p>
+                            <p class="tag">Python</p>
+                            <p class="tag">Typescript</p>
+                            <p class="tag">HTML</p>
+                            <p class="tag">CSS</p>
+                            <p class="tag">Figma</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="preview">
                 <div class="project-content">
-                    <div class="thumbnail ktp-img"></div>
+                    <a class="thumbnail ktp-img" href="projects/ktp.html"></a>
                     <div class="project-info">
                         <div class="project-title"><h3>Kappa Theta Pi Rush App</h3></div>
                         <div class="project-desc"><p>An iOS app designed for UNC's technology fraternity's rush process.</p></div>
+                        <a href="projects/ktp.html">Learn more
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+                            </svg>
+                        </a>
+                        <br>
                         <div class="tags">
-                            <p class="tag">#Figma</p>
+                            <p class="tag">Figma</p>
                         </div>
                     </div>
                 </div>
