--- a/resume.html
+++ b/resume.html
@@ -28,18 +28,10 @@
             </ul>
         </div>
     </nav>
-    <header>
-        <h1>My Resume</h1>
-    </header>
     <main class="resume">
-        <div class="section">
-            <div class="heading">Intro</div>
-            <div class="text">Hello my name is</div>
-        </div>
-    </main>
-    <!--<main id="resume">
+        <h1>Resume</h1>
         <iframe src="https://drive.google.com/file/d/1_f6J9sQryOYaN2J64GTJl-_ApA6Bb1IY/preview" width="700" height="700" allow="autoplay"></iframe>
-    </main>-->
+    </main>
     <footer>
         <div class="socials">
             <a href="mailto:elainedong520@gmail.com" target="_blank">
