--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elaine Dong | About</title>
+    <link rel="icon" href="favicon.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/other-styles.css">
@@ -14,7 +15,18 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-light" id="navbar">
         <a class="navbar-brand" href="index.html" id="logo">
-            <!--TODO: Add logo here in SVG format https://app.svgator.com/#/-->
+            <svg width="80" height="45" viewBox="0 0 69 109" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0.5 10.5V94L52.5 107.5V92L18 82.5V66L32.5 70L39.5 72V56L18 50V31L32.5 35L52.5 40.5V25.5L0.5 10.5Z" fill="#FFEAEA"/>
+                <path d="M18 66V82.5L32.5 74.5V70L18 66Z" fill="#FF7777"/>
+                <path d="M18 31V50L32.5 44.5V35L18 31Z" fill="#FF7777"/>
+                <path d="M39.5 56V72L52.5 65.5V50L39.5 56Z" fill="#FF7777"/>
+                <path d="M52.5 25.5V40.5L68.5 31V16L52.5 25.5Z" fill="#FF7777"/>
+                <path d="M52.5 92V107.5L68.5 98V84L52.5 92Z" fill="#FF7777"/>
+                <path d="M18 50L39.5 56L52.5 50L32.5 44.5L18 50Z" fill="#FFC5C5"/>
+                <path d="M0.5 10.5L52.5 25.5L68.5 16L17 1.5L0.5 10.5Z" fill="#FFC5C5"/>
+                <path d="M18 82.5L52.5 92L68.5 84L32.5 74.5L18 82.5Z" fill="#FFC5C5"/>
+                <path d="M0.5 10.5V94L52.5 107.5M0.5 10.5L52.5 25.5M0.5 10.5L17 1.5L68.5 16M52.5 107.5V92M52.5 107.5L68.5 98V84M52.5 92L18 82.5M52.5 92L68.5 84M18 82.5V66L32.5 70M18 82.5L32.5 74.5M39.5 72V56M39.5 72L52.5 65.5V50M39.5 72L32.5 70M39.5 56L18 50M39.5 56L52.5 50M18 50V31L32.5 35M18 50L32.5 44.5M52.5 40.5V25.5M52.5 40.5L68.5 31V16M52.5 40.5L32.5 35M52.5 25.5L68.5 16M52.5 50L32.5 44.5M32.5 44.5V35M32.5 70V74.5M32.5 74.5L68.5 84" stroke="black"/>
+            </svg>
             <div id="name">Elaine Dong</div>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,11 +45,11 @@
             <h1>
                 About Me
             </h1>
-            <p>I'm currently a junior at <span style="">UNC Chapel Hill</span> studying Computer Science and Information Science 
-                with a focus on Human-Computer Interaction.</p>
-            <p>After working on various fullstack development projects, I've come to appreciate frontend development the most. I've always had a passion for design, whether it be through making graphics for clubs or friends, 
-                or through personal art projects. When I discovered UX/UI Design, 
-                I realized it was the perfect overlap of technology and design and !</p>
+            <p>I'm currently a junior at <span class="bold">UNC Chapel Hill</span> studying Computer Science and Information Science 
+                with a focus on <span class="bold">Human-Computer Interaction</span>.</p>
+            <p>After working on various fullstack development projects, I've realized that I enjoy frontend development the most. 
+                I've always had a passion for design, whether it be through making graphics for clubs or friends, 
+                or through personal art projects. I enjoy UX design because it's the perfect overlap of design and technology!</p>
             <p>In my free time, you can probably find me painting, reading a good book, or learning how to ice skate.</p>
         </section>
         <section class="pink">
