--- a/about.html
+++ b/about.html
@@ -71,7 +71,26 @@
             <h1>
                 My Art
             </h1>
-            <div class="img-grid"></div>
+            <!-- <div class="img-grid">
+                <div class="img img1"></div>
+                <div class="img img2"></div>
+                <div class="img img3"></div>
+                <div class="img img4"></div>
+                <div class="img img5"></div>
+                <div class="img img6"></div>
+                <div class="img-container">
+                    <img src="./images/art/rainy-park.jpeg">
+                </div>
+                
+            </div> -->
+            <div class="art-grid">
+                <div class="art-piece img1"></div>
+                <div class="art-piece img2"></div>
+                <div class="art-piece img3"></div>
+                <div class="art-piece img4"></div>
+                <div class="art-piece img5"></div>
+                <div class="art-piece img6"></div>
+            </div>
         </section>
     </main>
     <footer>
