--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             <p>After working on various fullstack development projects, I've realized that I enjoy frontend development the most. 
                 I've always had a passion for design, whether it be through making graphics for clubs or friends, 
                 or through personal art projects. I enjoy UX design because it's the perfect overlap of design and technology!</p>
-            <p>In my free time, you can probably find me painting, reading a good book, or learning how to ice skate.</p>
+            <p>In my free time, you can probably find me painting, reading a good book, or trying out a new restaurant.</p>
         </section>
         <section class="pink">
             <h1>
@@ -67,29 +67,20 @@
                 me so much and shaped me into the student I am today.</p>
             <p>#331917 is also the hexcode color of the text on this page.</p>
         </section>
-        <section class="white">
+        <section class="white art">
             <h1>
                 My Art
             </h1>
-            <!-- <div class="img-grid">
-                <div class="img img1"></div>
-                <div class="img img2"></div>
-                <div class="img img3"></div>
-                <div class="img img4"></div>
-                <div class="img img5"></div>
-                <div class="img img6"></div>
-                <div class="img-container">
-                    <img src="./images/art/rainy-park.jpeg">
-                </div>
-                
-            </div> -->
             <div class="art-grid">
-                <div class="art-piece img1"></div>
+                <div class="art-piece img1" aria-label="Description of your first art piece" title="Title of your first art piece"></div>
                 <div class="art-piece img2"></div>
                 <div class="art-piece img3"></div>
                 <div class="art-piece img4"></div>
                 <div class="art-piece img5"></div>
                 <div class="art-piece img6"></div>
+                <div class="art-piece img7"></div>
+                <div class="art-piece img8"></div>
+                <div class="art-piece img9"></div>
             </div>
         </section>
     </main>
