--- a/projects/atb.html
+++ b/projects/atb.html
@@ -66,7 +66,7 @@
                 </svg>
             </a>
         </div>
-        <p><a href="https://github.com/elaine331917/elaine331917.github.io">Designed and Developed by Elaine Dong</a> | <script>document.write(new Date().getFullYear())</script></p>
+        <p><a href="https://github.com/elaine331917/elaine331917.github.io" target="_blank">Designed and Developed by Elaine Dong</a> | <script>document.write(new Date().getFullYear())</script></p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
