add image overlay

--- a/about.html
+++ b/about.html
@@ -65,22 +65,58 @@
                 and the memories were still fresh in my mind. So I chose the numbers 331917, 
                 which was a prominent number in the story, as a homage to the class that taught 
                 me so much and shaped me into the student I am today.</p>
-            <p>#331917 is also the hexcode color of the text on this page.</p>
+            <p>#331917 is also the hexcode color of the text on this site.</p>
         </section>
         <section class="white art">
             <h1>
                 My Art
             </h1>
             <div class="art-grid">
-                <div class="art-piece img1" aria-label="Description of your first art piece" title="Title of your first art piece"></div>
-                <div class="art-piece img2"></div>
-                <div class="art-piece img3"></div>
-                <div class="art-piece img4"></div>
-                <div class="art-piece img5"></div>
-                <div class="art-piece img6"></div>
-                <div class="art-piece img7"></div>
-                <div class="art-piece img8"></div>
-                <div class="art-piece img9"></div>
+                <a class="art-piece img1" href="./images/art/sunset-bridge.jpeg" target="_blank">
+                    <div class="overlay">
+                        <h1>01. Dawn Bridge</h1>
+                    </div>
+                </a>
+                <a class="art-piece img2" href="./images/art/dreamy-mountains.jpeg" target="_blank">
+                    <div class="overlay">
+                        <h1>02. Dreaming Mountains</h1>
+                    </div>
+                </a>
+                <a class="art-piece img3" href="./images/art/lovebirds.jpeg" target="_blank">
+                    <div class="overlay">
+                        <h1>03. Lovebirds</h1>
+                    </div>
+                </a>
+                <a class="art-piece img4" href="./images/art/burning-city.jpeg" target="_blank">
+                    <div class="overlay">
+                        <h1>04. Burning City</h1>
+                    </div>
+                </a>
+                <a class="art-piece img5" href="./images/art/days-end.jpeg" target="_blank">
+                    <div class="overlay">
+                        <h1>05. Day's End</h1>
+                    </div>
+                </a>
+                <a class="art-piece img6" href="./images/art/in-the-clouds.jpeg" target="_blank">
+                    <div class="overlay">
+                        <h1>06. In the Clouds</h1>
+                    </div>
+                </a>
+                <a class="art-piece img7" href="./images/art/stitch.jpeg" target="_blank">
+                    <div class="overlay">
+                        <h1>07. Stitched</h1>
+                    </div>
+                </a>
+                <a class="art-piece img8" href="./images/art/hydrangeas.jpeg" target="_blank">
+                    <div class="overlay">
+                        <h1>08. Hydrangeas</h1>
+                    </div>
+                </a>
+                <a class="art-piece img9" href="./images/art/rainy-park.jpeg" target="_blank">
+                    <div class="overlay">
+                        <h1>09. Rainy Day in the Park</h1>
+                    </div>
+                </a>
             </div>
         </section>
     </main>
