add to top button

--- a/resume.html
+++ b/resume.html
@@ -15,17 +15,17 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-light" id="navbar">
         <a class="navbar-brand" href="index.html" id="logo">
-            <svg width="80" height="45" viewBox="0 0 69 109" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0.5 10.5V94L52.5 107.5V92L18 82.5V66L32.5 70L39.5 72V56L18 50V31L32.5 35L52.5 40.5V25.5L0.5 10.5Z" fill="#FFEAEA"/>
-                <path d="M18 66V82.5L32.5 74.5V70L18 66Z" fill="#FF7777"/>
-                <path d="M18 31V50L32.5 44.5V35L18 31Z" fill="#FF7777"/>
-                <path d="M39.5 56V72L52.5 65.5V50L39.5 56Z" fill="#FF7777"/>
-                <path d="M52.5 25.5V40.5L68.5 31V16L52.5 25.5Z" fill="#FF7777"/>
-                <path d="M52.5 92V107.5L68.5 98V84L52.5 92Z" fill="#FF7777"/>
-                <path d="M18 50L39.5 56L52.5 50L32.5 44.5L18 50Z" fill="#FFC5C5"/>
-                <path d="M0.5 10.5L52.5 25.5L68.5 16L17 1.5L0.5 10.5Z" fill="#FFC5C5"/>
-                <path d="M18 82.5L52.5 92L68.5 84L32.5 74.5L18 82.5Z" fill="#FFC5C5"/>
-                <path d="M0.5 10.5V94L52.5 107.5M0.5 10.5L52.5 25.5M0.5 10.5L17 1.5L68.5 16M52.5 107.5V92M52.5 107.5L68.5 98V84M52.5 92L18 82.5M52.5 92L68.5 84M18 82.5V66L32.5 70M18 82.5L32.5 74.5M39.5 72V56M39.5 72L52.5 65.5V50M39.5 72L32.5 70M39.5 56L18 50M39.5 56L52.5 50M18 50V31L32.5 35M18 50L32.5 44.5M52.5 40.5V25.5M52.5 40.5L68.5 31V16M52.5 40.5L32.5 35M52.5 25.5L68.5 16M52.5 50L32.5 44.5M32.5 44.5V35M32.5 70V74.5M32.5 74.5L68.5 84" stroke="black"/>
+            <svg width="80" height="45" viewBox="0 0 71 111" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.5 11.5V95L53.5 108.5V93L19 83.5V67L33.5 71L40.5 73V57L19 51V32L33.5 36L53.5 41.5V26.5L1.5 11.5Z" fill="#FFEAEA"/>
+                <path d="M19 67V83.5L33.5 75.5V71L19 67Z" fill="#FF7777"/>
+                <path d="M19 32V51L33.5 45.5V36L19 32Z" fill="#FF7777"/>
+                <path d="M40.5 57V73L53.5 66.5V51L40.5 57Z" fill="#FF7777"/>
+                <path d="M53.5 26.5V41.5L69.5 32V17L53.5 26.5Z" fill="#FF7777"/>
+                <path d="M53.5 93V108.5L69.5 99V85L53.5 93Z" fill="#FF7777"/>
+                <path d="M19 51L40.5 57L53.5 51L33.5 45.5L19 51Z" fill="#FFC5C5"/>
+                <path d="M1.5 11.5L53.5 26.5L69.5 17L18 2.5L1.5 11.5Z" fill="#FFC5C5"/>
+                <path d="M19 83.5L53.5 93L69.5 85L33.5 75.5L19 83.5Z" fill="#FFC5C5"/>
+                <path d="M1.5 11.5V95L53.5 108.5M1.5 11.5L53.5 26.5M1.5 11.5L18 2.5L69.5 17M53.5 108.5V93M53.5 108.5L69.5 99V85M53.5 93L19 83.5M53.5 93L69.5 85M19 83.5V67L33.5 71M19 83.5L33.5 75.5M40.5 73V57M40.5 73L53.5 66.5V51M40.5 73L33.5 71M40.5 57L19 51M40.5 57L53.5 51M19 51V32L33.5 36M19 51L33.5 45.5M53.5 41.5V26.5M53.5 41.5L69.5 32V17M53.5 41.5L33.5 36M53.5 26.5L69.5 17M53.5 51L33.5 45.5M33.5 45.5V36M33.5 71V75.5M33.5 75.5L69.5 85" stroke="black" stroke-width="3"/>
             </svg>
             <div id="name">Elaine Dong</div>
         </a>
@@ -69,6 +69,10 @@
         </div>
         <p><a href="https://github.com/elaine331917/elaine331917.github.io" target="_blank">Designed and Developed by Elaine Dong</a> | <script>document.write(new Date().getFullYear())</script></p>
     </footer>
+    <button onclick="topFunction()" id="top" title="Go to top">
+        <img src="./icons/top.svg">
+    </button>
+    <script src="./scripts/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
