--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elaine Dong | Portfolio</title>
-    <link rel="icon" href="favicon.svg">
+    <title>Home | Elaine Dong Portfolio</title>
+    <link rel="icon" href="./icons/favicon.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -67,10 +67,10 @@
                         <br>
                         <div class="tags">
                             <p class="tag">Angular</p>
-                            <p class="tag">Python</p>
-                            <p class="tag">Typescript</p>
+                            <p class="tag">TypeScript</p>
                             <p class="tag">HTML</p>
                             <p class="tag">CSS</p>
+                            <p class="tag">Python</p>
                             <p class="tag">Figma</p>
                         </div>
                     </div>
