input information on projects

--- a/projects/atb.html
+++ b/projects/atb.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="../icons/favicon.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/project.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&family=Righteous&family=Roboto+Mono:wght@300;400;500&family=Rubik&display=swap" rel="stylesheet">
@@ -41,7 +42,53 @@
         </div>
     </nav>
     <main>
-
+        <section class="background white">
+            <h1>Around the Block</h1>
+            <h2>COMP 590: User Interfaces</h2>
+            <h3>Roles: Design Lead, Developer, Researcher</h3>
+            <p>With a team of three, I designed and developed a website for artists struggling with creative block, 
+                looking to challenge themselves and connect with a community of creatives. Users can generate random art challenges, 
+                called meChallenges, that will challenge them to create something new and unique every time. 
+                Users can also participate in community challenges, called weChallenges, and see what other artists are creating. 
+                Users can post submissions for the challenges and get feedback and support from other members of the community.</p>
+            <div class="tags">
+                <p class="tag">Angular</p>
+                <p class="tag">TypeScript</p>
+                <p class="tag">HTML</p>
+                <p class="tag">CSS</p>
+                <p class="tag">Python</p>
+                <p class="tag">PostgreSQL</p>
+                <p class="tag">FastAPI</p>
+                <p class="tag">SQLAlchemy</p>
+                <p class="tag">Figma</p>
+            </div>
+        </section>
+        <section class="pink">
+            <h2>01. Research</h2>
+            <p>Before starting the design process, our team administered 12 user interviews with artists, 
+                of which I conducted 6. From the information we gathered, we created 3 user personas to represent 
+                the different types of users that our website targets. We also created empathy maps to identiy user 
+                pain points and journey maps to visualize use cases</p>
+            <div class="personas">
+                <img>
+                <img>
+                <img>
+            </div>
+        </section>
+        <section class="white">
+            <h2>02. Design</h2>
+            <h3>Low Fidelity Wireframes</h3>
+            <h3>Styling</h3>
+            <h3>High Fidelity Wireframes and Interactive Prototype</h3>
+            <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FHNoOWo1tvsZzL69swSnkdF%2FAtB-Prototype%3Fnode-id%3D116-114%26scaling%3Dmin-zoom%26page-id%3D56%253A98%26starting-point-node-id%3D116%253A114" allowfullscreen class="atb-prototype"></iframe>
+            <p>Open prototype in new tab</p>
+        </section>
+        <section class="pink">
+            <h2>03. Implementation</h2>
+            <p>We used Angular, TypeScript, HTML, and CSS to build the frontend; 
+                PostgreSQL and SQLAlchemy for managing the database; and Python to build the backend.</p>
+            <p>View deployed site and GitHub repository</p>
+        </section>
     </main>
     <footer>
         <div class="socials">
