--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <a class="thumbnail ktp-img" href="projects/ktp.html"></a>
                     <div class="project-info">
                         <div class="project-title"><h3>Kappa Theta Pi Rush App</h3></div>
-                        <div class="project-desc"><p>An iOS app designed for UNC's technology fraternity's rush process.</p></div>
+                        <div class="project-desc"><p>An iOS app designed to improve the efficiency of UNC's technology fraternity's rush process.</p></div>
                         <a href="projects/ktp.html">Learn more
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
