--- a/projects/ktp.html
+++ b/projects/ktp.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="../icons/favicon.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/project.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&family=Righteous&family=Roboto+Mono:wght@300;400;500&family=Rubik&display=swap" rel="stylesheet">
@@ -41,7 +42,39 @@
         </div>
     </nav>
     <main>
-
+        <section class="background white">
+            <h1>KTP Rush App</h1>
+            <h2>INLS 382: System Design and Analysis</h2>
+            <h3>Role: UX/UI Designer</h3>
+            <p>Kappa Theta Pi (KTP) is a co-ed professional fraternity specializing in technology. I designed an iOS app for 
+                the UNC chapter's rush process, the process of applying to become a member.
+            </p>
+            <div class="tags">
+                <p class="tag">Figma</p>
+            </div>
+        </section>
+        <section class="blue">
+            <h2>01. Research</h2>
+            <h3>The Problem</h3>
+            <h3>Interviews</h3>
+            <p>User interviews were conducted with KTP's director of rush as well as current KTP members and former rushees.</p>
+            <div class="personas">
+                <img>
+                <img>
+            </div>
+        </section>
+        <section class="white">
+            <h2>02. Design</h2>
+            <h3>Models</h3>
+            <h3>Styling</h3>
+            <h3>High Fidelity Wireframes and Interactive Prototype</h3>
+            <iframe class="ktp-prototype" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fh0wcicMr6EF46g9UFmmXpe%2FKTP-Wireframes%3Fnode-id%3D120-153%26scaling%3Dscale-down%26page-id%3D1%253A2%26starting-point-node-id%3D222%253A916" allowfullscreen></iframe>
+            <p>Open prototype in new tab</p>
+        </section>
+        <section class="blue">
+            <h2>03. Future Work</h2>
+            <p>The final prototype gained approval from the client, KTP's Director of Rush. The implementation of this app will be developed in Summer 2023 using SwiftUI.</p>
+        </section>
     </main>
     <footer>
         <div class="socials">
