--- a/projects/atb.html
+++ b/projects/atb.html
@@ -81,13 +81,18 @@
             <h3>Styling</h3>
             <h3>High Fidelity Wireframes and Interactive Prototype</h3>
             <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FHNoOWo1tvsZzL69swSnkdF%2FAtB-Prototype%3Fnode-id%3D116-114%26scaling%3Dmin-zoom%26page-id%3D56%253A98%26starting-point-node-id%3D116%253A114" allowfullscreen class="atb-prototype"></iframe>
-            <p>Open prototype in new tab</p>
+            <div class="row">
+                <a class="button btn-pink" href="https://www.figma.com/proto/HNoOWo1tvsZzL69swSnkdF/AtB-Prototype?node-id=116-114&scaling=min-zoom&page-id=56%3A98&starting-point-node-id=116%3A114&hide-ui=1" target="_blank">Open Prototype in New Tab</a>
+            </div>
         </section>
         <section class="pink">
             <h2>03. Implementation</h2>
             <p>We used Angular, TypeScript, HTML, and CSS to build the frontend; 
                 PostgreSQL and SQLAlchemy for managing the database; and Python to build the backend.</p>
-            <p>View deployed site and GitHub repository</p>
+            <div class="row">
+                <a class="button btn-pink" href="https://aroundtheblock.apps.cloudapps.unc.edu/" target="_blank">Live Site</a>
+                <a class="button btn-pink" href="https://github.com/chphoom/aroundtheblock" target="_blank">Repository</a>
+            </div>
         </section>
     </main>
     <footer>
